static/css/mobile.css
/** No Nav on mobile **/
nav {
    display: none;
}

/*MAIN*/
.header{
  font-size: 100px;
  line-height: 77px;
}

#header {
  padding: 7px;
  transform: scale(0.8);
  margin: -55px;
}

/** Scale background **/
.logotext {
  background-position-x: 75%;
}
.logotext {padding-top: 185px;}
#header h1:nth-child(5){
  padding-left: 15px;
}

/** first Section slideshow should change positions & scaling **/
section{
  height: auto;
}
#infoHeader {font-size: 42px; line-height: 45px;}
#infosection p {
  width: auto;
}
.image-slideshow{width: 100%;}


/*MATERIALS*/
#materialHeader{ height: 100vh;}
#materialHeader .header{
  display: block;
  font-size: 100px;
  line-height: 77px;
  letter-spacing: normal;
}
.materialHeaderWrapper{
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
}
#materialSection{
  height: auto; /*auto senare?*/
}
#materialSection h3{
  font-size: 42px;
  line-height: 45px;
}
#triangleSVG{
  width: 100%;
  height: 85%;
}
#triangleSVG > text{
  font-size: .35em;
}
#materialText{
  font-size: 16px;
  line-height: 24px;
  letter-spacing: 1px;
}


/*SHOPLINK*/
#shopLinkSection{padding-top: 25%;}
.headerText {
  padding: 1px;
  width: 255px;
  height: 0;

  width: 255px;
  font-size: 45px;
  word-wrap: break-word;
  margin: -40% 0px 0px -5%;
  line-height: 45px;

  font-size: 45px;
  word-wrap: break-word;
}

